2011-09-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* include/gen_list.h, src/gen_list.c:
	  - removed unused functions (add_file_to_list, traverse_tree, gen_list)

2011-09-03	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - print list of added files (verbose level >= 2) and their details
	    (verbose level >= 6) if database has been initialized

2011-07-12	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - fixed has_str_changed function
	* src/util.c:
	  - fixed bad free of hostname variable
	* src/db_file.c:
	  - removed dead code

2011-04-08	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/gen_list.c:
	  - fixed wrong total number of entries if comparing two databases

2011-03-29	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - rewrote gen_report function, changes included:
		- merged gen_report() and report_tree()
		- added info about verbose level, ignorelist and report_attributes to
		  report if they differ from standard value
		- changed report if aide found no changes
		- added info about number of entries if aide found no changes or
		  the database has been initialized
		- fixed report of added or removed entries if verbose level is 6 or
		  higher and there are only added or removed entries

2011-03-24	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - made ignored_attrs and forced_attrs global
	  - added run time to report

2011-03-22	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/compare_db.c:
	  - print "End timestamp" message in report

2011-03-18	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* src/db_disk.c:
	  - fixed handling of "/" directory inode
	  - got rid of some static variables

2011-03-01	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Removed contrib/mkgitsnapshot.sh

2011-02-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* Released version 0.16a1

2011-02-09	Hannes von Haugwitz <hannes@vonhaugwitz.com>
	* README: