@@ -1,3 +1,6 @@
+2011-09-05	Hannes von Haugwitz <hannes@vonhaugwitz.com>
+	* Added new root_prefix option
+
 2011-09-04	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* include/gen_list.h, src/gen_list.c:
 	  - removed unused functions (add_file_to_list, traverse_tree, gen_list)
